# oura

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config_change.md  feature_request.md
.github/workflows/: ci.yml  pr-review.yml  release.yml
mcp-config/: claude-code.json  cursor.json  opencode.json
plugins/example-time-tracker/: plugin.json
src/: agents.rs  config.rs  connector.rs  engine.rs  error.rs  events.rs  feedback.rs  fs_utils.rs  github.rs  main.rs  mcp.rs  profile.rs  synapsis.rs  traits.rs  types.rs
src/mcp/: handlers.rs  mod.rs  resources.rs
