[package]
name = "oura"
version = "0.1.0"
description = "Oura — MCP server for intelligent iterative looping. The serpent that refines code through endless improvement cycles."
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
regex = "1"
dirs = "5.0"
base64 = "0.22"
